# PhotonTCP

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: conventions.md
docs/milestones/: M1.md  M10.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md  M8.md  M9.md
docs/reports/: M1-impl.md  M1-review.md  M10-impl.md  M10-review.md  M2-impl.md  M2-review.md  M3-impl.md  M3-review.md  M4-impl.md  M4-review.md  M5-impl.md  M5-review.md  M6-impl.md  M6-review.md  M7-impl.md  M7-review.md  M8-impl.md  M8-review.md  M9-impl.md  M9-review.md  retro.md
examples/: chat_loopback.py  echo_loopback.py  file_loopback.py  optical_link.py  optical_selfcheck.py  qr_decode_bench.py  qr_loopback.py  reliable_loopback.py  session_loopback.py
photontcp/: __init__.py
photontcp/app/: __init__.py  chat.py  codec.py  file.py  file_codec.py
photontcp/channel/: __init__.py  base.py  image_loopback.py  loopback.py
photontcp/optical/: __init__.py  channel.py  cv2_devices.py  devices.py
photontcp/packet/: __init__.py  crc.py  header.py  types.py
photontcp/qr/: __init__.py  decode.py  encode.py
photontcp/reliability/: __init__.py  arq.py  rto.py  serial.py
tests/: test_arq.py  test_chat.py  test_chat_codec.py  test_file_codec.py  test_file_transfer.py  test_hardening.py  test_image_channel.py  test_loopback.py  test_mux.py  test_optical_channel.py  test_optical_concurrency.py  test_optical_ec.py  test_optical_pacing.py  test_packet.py  test_qr.py  test_qr_robustness.py  test_serial_rto.py  test_session_handshake.py  test_session_heartbeat.py  test_session_reliable.py
(+7 files in other folders)
